# keycode

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  keycode
.github/workflows/: action.yml  cmake.yml
lib/: ld-linux.so.2  libgcc_s.so.1  libm.so.6  libncursesw.so.6  libstdc++.so.6
source/: keycode.cpp
src/: keycode.cpp  main.c
