cmake_minimum_required(VERSION 3.7)
project(keycode)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -lncurses")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -lncurses")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -Werror -Wextra -lncurses")
file(GLOB SOURCES "src/*.cpp")
add_executable(keycode ${SOURCES})
